testing/tests/00main/errors/wrong_ret_type_2.sasc
//! BUILD_EXIT_CODE=3

fn main() -> u32 {
	return;
}